--- a/style.css
+++ b/style.css
@@ -170,3 +170,9 @@ h2 {
 .fileopener:hover {
   border-bottom:3px solid var(--color-secondary);
 }
+
+/* Ajustar el tamaño del ícono */
+.link-icon {
+  width: 760px;
+  height: 760px;
+}
